add: завершить выполнение требований для Спринта 5